style: lowercase graph titles (and other content changes) (#43)
* update readme with correct classprofile link

* fix typos

* lowercase all graph titles

- some changes to pie chart names to reflect the answers displayed
- some changes to label names to axes
- some content changes (typos, rewordings, punctuation)
- change male/female => men/women

* add punctuation to 'big' span text

- minor changes: add small disclaimer in lgbtq section
- minor rewordings

* move cat/dog section to misc

* change USA to US

see https://english.stackexchange.com/questions/159018/the-usa-vs-the-us

* address PR comments

- remove unasked question in readme
- cap Quebec
- rename graph to reflect data presented

* reword coop gender pay section (per PR comments)

* fix linechart labels

- make svg a bit larger if labels exceed width
- properly label the men/women salary chart
- fix typo and variable name 'collision'

* fix: typo for grouped barchart leading to errors

remove barOptions (unused/outdated)

--- a/content/academics.html
+++ b/content/academics.html
@@ -40,7 +40,7 @@
   </table>
 </p>
 <div class="half second">
-  <span class="graph-title">Grades from 1A to 4A </span>
+  <span class="graph-title">grade distributions from 1A to 4A </span>
   <div id="grades"></div>
 </div>
 
@@ -55,7 +55,7 @@
   preferred attending courses asynchronously.
 </p>
 <div class="half second">
-  <span class="graph-title">Attendance</span>
+  <span class="graph-title">course attendance</span>
   <div id="attendance"></div>
 </div>
 
@@ -69,7 +69,7 @@
   Failing a midterm does not necessarily mean that the course will be failed as well.
 </p>
 <div class="half second">
-  <span class="graph-title"> Failures </span>
+  <span class="graph-title"> failures </span>
   <div id="failing">
   </div>
 </div>
@@ -88,7 +88,7 @@
   You can find a list of all enrichment opportunities avaible to SE <a href="https://uwaterloo.ca/software-engineering/undergraduate-students/enrichment-opportunities">here</a>.
 </p>
 <div class="half second">
-  <span class="graph-title"> Type of Options </span>
+  <span class="graph-title"> type of options </span>
   <div id="options">
   </div>
 </div>
@@ -105,7 +105,7 @@
   the freedom provided by the CS program and the possibility of taking a Digital Hardware or a Software Engineering specialization.
 </p>
 <div class="half second">
-  <span class="graph-title">Transferred From </span>
+  <span class="graph-title"> transferred to SE from... </span>
   <div id="transfer-from">
   </div>
 </div>
@@ -124,7 +124,7 @@
   not every student had the opportunity to be taught with said professors.
 </p>
 <div class="half second">
-  <span class="graph-title"> Favourite Professors </span>
+  <span class="graph-title"> favourite professors </span>
   <div id="prof-cloud">
   </div>
 </div>
@@ -147,7 +147,7 @@
   enjoyed more higher level courses.
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite mandatory courses</span>
+  <span class="graph-title">favourite mandatory courses</span>
   <div id="favourite-mandatory"></div>
 </div>
 
@@ -158,17 +158,17 @@
     <a href="https://uwflow.com/course/ece106" target="_blank">ECE 106 (Electricity and Magnetism)</a>
     and <a href="https://uwflow.com/course/se380" target="_blank">SE 380 (Introduction to Feedback Control)</a> were the most disliked core courses.
   </span>
-  Some Linkage Electives were also not liked among the class such as SMF 101, SPCOMM 100, SPCOMM 223.
+  Some Linkage Electives were also not liked among the class such as SMF 101, SPCOMM 100, and SPCOMM 223.
   <br></br>
   It's important to note that courses that were disliked do not imply that
-  students find the content useless. Instead, there are a variety of factors
-  such as personal interests, final grades, and workload. For example, Operating Systems (SE 350) 
-  is considered useful by 96% of students
+  students find the content useless. Instead, a variety of factors, such as
+  personal interests, final grades, and workload, may have come into play.
+  For example, Operating Systems (SE 350) is considered useful by 96% of students
   <a href="https://uwflow.com/course/se350" target="_blank">
-    according to UWFlow.</a>
+    according to UWFlow</a>, despite being nominated as a least favourite course.
 </p>
 <div class="half">
-  <span class="graph-title">Least favourite mandatory courses</span>
+  <span class="graph-title">least favourite mandatory courses</span>
   <div id="disliked-mandatory"></div>
 </div>
 
@@ -186,7 +186,7 @@
   None of the favourite electives were among the communication electives or science electives options.
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite elective courses</span>
+  <span class="graph-title">favourite elective courses</span>
   <div id="favourite-elective"></div>
 </div>
 
@@ -201,7 +201,7 @@
   Although these courses involved a high workload, most of them were also popular among respondents.
 </p>
 <div class="half second">
-  <span class="graph-title">Course with the largest workload</span>
+  <span class="graph-title">courses with the largest workloads</span>
   <div id="largest-workload"></div>
 </div>
 
@@ -219,7 +219,7 @@
   with graduation traditions and FYDP work on top of courses.
 </p>
 <div class="half second">
-  <span class="graph-title"> Overloading vs Academic Terms</span>
+  <span class="graph-title">terms that were overloaded</span>
   <div id="overloading">
   </div>
 </div>
@@ -231,7 +231,7 @@
   take more electives than prescribed.
 </p>
 <div class="half second">
-  <span class="graph-title"> Reasons for Overloading</span>
+  <span class="graph-title">reasons for overloading</span>
   <div id="overloading-reasons">
   </div>
 </div>
@@ -249,7 +249,7 @@
   Note that CMH opened to students in the class's 2A term.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' location pre COVID</span>
+  <span class="graph-title">students' location pre COVID</span>
   <div id="campus-location-pre"></div>
 
   <div class="scale">
@@ -273,7 +273,7 @@
   However, in 4B, most students decided to move back home.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' location post COVID</span>
+  <span class="graph-title">students' location post COVID</span>
   <div id="campus-location-post"></div>
 
   <div class="scale">
@@ -297,8 +297,9 @@
 
 </p>
 <div class="half second">
-  <span class="graph-title">Attendance compared to relative grade from the
-    average</span>
+  <span class="graph-title">
+    grade relative to the average compared to attendance
+  </span>
   <div id="distribution"></div>
 </div>
 <div class="vbx2"></div>
@@ -310,7 +311,7 @@
   </span>
 </p>
 <div class="half second">
-  <span class="graph-title">Parents' education compared to grades</span>
+  <span class="graph-title">grade compared to parents' education level</span>
   <div id="parent-grades"></div>
 </div>
 
@@ -325,7 +326,7 @@
   to students who did not take part in such programs in High School.
 </p>
 <div class="half second">
-  <span class="graph-title">Enriched Programs compared to grades</span>
+  <span class="graph-title">grades compared to enriched programs</span>
   <div id="enriched-grades"></div>
 
   <div class="scale">
@@ -364,7 +365,7 @@
   and grades, this does not necessarily mean that one causes the other.
 </p>
 <div class="half second">
-  <span class="graph-title">Hours of Sleep compared to grades</span>
+  <span class="graph-title">grades compared to hours of sleep</span>
   <div id="sleep-grades"></div>
 </div>
 
