--- a/content/background.html
+++ b/content/background.html
@@ -5,7 +5,7 @@
   Women make up 21% of respondents and students in the class, which is less than the percent of women in tech (<a href="https://builtin.com/women-tech/women-in-tech-workplace-statistics">25%</a>).
   </span>
   The class saw a 3% increase in women representation from 1A to 4B, in first year, 
-  18% of the class were female.
+  18% of the class were women.
   <br /> <br />
   There are many on-campus communities that supports the success of women in
   computer science and engineering at UWaterloo. For example,
@@ -15,7 +15,7 @@
   <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo</a>.
 </p>
 <div class="half second">
-  <span class="graph-title">Gender proportion in class</span>
+  <span class="graph-title">SE 21's gender distribution</span>
   <div id="gender"></div>
 </div>
 
@@ -27,7 +27,7 @@
   76.4% of respondents were born in 1998.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Year of Birth</span>
+  <span class="graph-title">students' year of birth</span>
   <div id="year-of-birth"></div>
 </div>
 
@@ -36,7 +36,7 @@
 <h3> Ethnicity</h3>
 <p class="half">
   <span class="big">
-  Students come from many different ethnic backgrounds. 
+  Students come from many different ethnic backgrounds.
   </span>
   There is a significant number of respondents who identify as Caucasian or East Asian
   Asians. There is also more ethnic diversity among men than among women respondents, 
@@ -50,7 +50,7 @@
   <a href="https://www.facebook.com/uwbase/"> UW Black Association for Student Expression (UW BASE)</a>.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' ethnicities</span>
+  <span class="graph-title">students' ethnicities</span>
   <div id="ethnicity"></div>
 
   <div class="scale">
@@ -73,13 +73,14 @@
   </span>
   4 students preferred not to disclose.
   <br /> <br />
-  There are many on-campus communities that supports LGBTQ+ community
+  There are many on-campus communities that support LGBTQ+ community
   such as
   <a href="https://uwaterloo.ca/engineering/events/engiqueers">Engiqueers</a>, and
   <a href="https://wusa.ca/services/glow-centre-sexual-and-gender-diversity"> Glow</a>.
+  <span class="small">This is not to say that only non-heterosexual people are part of the LGBTQ+ community.</span>
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Sexual Orientation</span>
+  <span class="graph-title">students' sexual orientation</span>
   <div id="sexual-orientation"></div>
 </div>
 
@@ -100,7 +101,7 @@
   International students came from countries such as China and India.
 </p>
 <div class="half second">
-  <span class="graph-title">Proportion of international students</span>
+  <span class="graph-title">domestic (Canadian) vs international student breakdown</span>
   <div id="international"></div>
 </div>
 
@@ -115,11 +116,11 @@
 </p>
 <div class="vb"></div>
 <div class="half">
-  <span class="graph-title">Students Immigrated to Canada?</span>
+  <span class="graph-title">did you immigrate to Canada?</span>
   <div id="immigrated"></div>
 </div>
 <div class="half second">
-  <span class="graph-title">Students Immigrated to Canada from...</span>
+  <span class="graph-title">students immigrated to Canada from...</span>
   <div id="emigrated"></div>
 </div>
 
@@ -131,7 +132,7 @@
   In Canada, students also came from other provinces such as Alberta, Britich Columbia, New Brunswick and Quebec.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Home Location</span>
+  <span class="graph-title">locations considered "home"</span>
   <div id="home-location"></div>
 </div>
 
@@ -147,25 +148,25 @@
   there is a wide variety of language spoken by students.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Mother Tongue</span>
+  <span class="graph-title">students' mother tongue</span>
   <div id="mother-tongue"></div>
 </div>
 
-<h3>Language Spoken</h3>
+<h3>Polyglots, the Lot of Us</h3>
 <p class="full">
   <span class="big">
-  63% of respondents at least speak two languages.
+  63% of respondents speak at least two languages.
   </span>
   The most common languages spoken, other than English, are Mandarin and French.
   Among students who spoke 3+ languages, French was a common spoken language.
 </p>
 <div class="vb"></div>
 <div class="half">
-  <span class="graph-title">Number of Languages Students can Speak</span>
+  <span class="graph-title">number of languages students can speak</span>
   <div id="num-languages"></div>
 </div>
 <div class="half second">
-  <span class="graph-title">Languages Students can speak</span>
+  <span class="graph-title">languages students can speak</span>
   <div id="known-languages"></div>
 </div>
 
@@ -182,7 +183,7 @@
   University. The majority of students have a family income between $50,000 and $200,000.
 </p>
 <div class="half second">
-  <span class="graph-title">Number of students per family income class</span>
+  <span class="graph-title">number of students per family income class</span>
   <div id="family-income"></div>
 </div>
 
@@ -197,7 +198,7 @@
   a Master or Doctorate.
 </p>
 <div class="half second">
-  <span class="graph-title">Parents' highest education</span>
+  <span class="graph-title">parents' highest education</span>
   <div id="parent-education"></div>
 </div>
 
@@ -206,11 +207,11 @@
 <h3>Siblings</h3>
 <p class="half">
   <span class="big">
-  Majority of students have at least 1 sibling.
+  The majority of students have at least 1 sibling.
   <!-- Maybe look at sibling number vs family income? -->
 </p>
 <div class="half second">
-  <span class="graph-title">Students' Number of Siblings</span>
+  <span class="graph-title">students' number of siblings</span>
   <div id="siblings"></div>
 </div>
 
@@ -226,7 +227,7 @@
   accepted into the program, 11.3% of respondents had an average less than 95%.
 </p>
 <div class="half second">
-  <span class="graph-title">Admission Average</span>
+  <span class="graph-title">admission average</span>
   <div id="admission-average"></div>
 </div>
 
@@ -239,7 +240,7 @@
   AP and IB.
 </p>
 <div class="half second">
-  <span class="graph-title">Students & Enriched Programs</span>
+  <span class="graph-title">students & enriched programs</span>
   <div id="enriched-program"></div>
 </div>
 
@@ -250,10 +251,10 @@
   <span class="big">
   All students from Quebec attended CEGEP partially, meaning they did not graduate.
   </span>
-  Among respondents, no students from outisde of Quebec attended CEGEP.
+  Among respondents, no students from outside of Quebec attended CEGEP.
 </p>
 <div class="half second">
-  <span class="graph-title">Quebec Students & CEGEP</span>
+  <span class="graph-title">Quebec students & CEGEP</span>
   <div id="cegep"></div>
 </div>
 
@@ -265,40 +266,29 @@
   The students who attended CEGEP took part in a wide variety of programs related to Science, 
   Mathematics, and Computer Science.
   </span>
-  Unlike other universities, CEGEP students, enrolled in an Engineering program at Waterloo, cannot convert
-  any of their course taken in CEGEP into university credits, except for Calculus courses which can sometimes be counted as
+  Unlike other universities, CEGEP students enrolled in an Engineering program at Waterloo cannot convert
+  any of their CEGEP course credits into university credits. An exception exists for Calculus courses which can be counted as
   a credit toward Math 117 (Calculus 1 for Engineering).
 </p>
 <div class="half second">
-  <span class="graph-title">Students & CEGEP Fields</span>
+  <span class="graph-title">students & CEGEP fields</span>
   <div id="cegep-attended"></div>
 </div>
 
 <div class="vbx2"></div>
 <h2> Others </h2>
 
-<h3>Programming Knowlege</h3>
+<h3>Programming Knowledge</h3>
 <p class="half">
   <span class="big">
-  5.6% of Students did not know how to program prior to starting University.
+  5.6% of students did not know how to program prior to starting University.
   </span>
   Programming knowledge is a required admission criteria to join the Software Engineering
-  Program at the University of Waterloo.
-  Among other reasons, this could also be due to transfer students who joined the program later.
+  program at the University of Waterloo.
+  The non-zero amount of students who had no prior coding experience could be due to transfer
+  student responses, among other reasons.
 </p>
 <div class="half second">
-  <span class="graph-title">Students Knew Programming in High School</span>
+  <span class="graph-title">did you have programming experience before university?</span>
   <div id="programming"></div>
-</div>
-
-<div class="vbx2"></div>
-
-<h3>Cat or Dog</h3>
-<p class="half">
-  <span class="big">
-  Most students are Dog lovers! 🐕
-</p>
-<div class="half second">
-  <span class="graph-title">Cat or Dog</span>
-  <div id="cat-or-dog"></div>
 </div>
