--- a/content/exchange.html
+++ b/content/exchange.html
@@ -14,7 +14,7 @@
 </p>
 <div class="vb"></div>
 <div class="half">
-    <span class="graph-title">Have you gone on exchange?</span>
+    <span class="graph-title">have you gone on exchange?</span>
     <div id="exchange-participation"></div>
 </div>
 <div class="half second">
@@ -34,7 +34,7 @@
 </div>
 
 <div class="full">
-    <span class="graph-title">Reasons for not going on exchange</span>
+    <span class="graph-title">reasons for not going on exchange</span>
     <div id="exchange-no-reasons"></div>
 </div>
 <div class="vb"></div>
@@ -53,7 +53,7 @@
 </p>
 <div class="vb"></div>
 <div class="full">
-    <span class="graph-title"> Exchange countries in which SEs studied </span>
+    <span class="graph-title">exchange countries in which SEs studied</span>
     <p class="full center">
         <b> Interactive: </b> Click on a highlighted country to see the sister
         schools and the number of people who attended.
