--- a/content/finances.html
+++ b/content/finances.html
@@ -11,7 +11,7 @@
 </p>
 <!-- Graph -->
 <div class="half second">
-  <span class="graph-title">How did students budget their money</span>
+  <span class="graph-title">how students budgetted their money</span>
   <div id="budgeting"></div>
 </div>
 
@@ -28,7 +28,7 @@
   "With great wealth comes great responsibility"
 </p>
 <div class="half second">
-  <span class="graph-title">How did students invest their money</span>
+  <span class="graph-title">How students invested their money</span>
   <div id="investing"></div>
 </div>
 
@@ -45,7 +45,7 @@
   This may suggest that the families of the majority SE students had already planned for their children to attend post-secondary education.
 </p>
 <div class="half second">
-  <span class="graph-title">Count of students with funding from family (i.e. RESP)</span>
+  <span class="graph-title">did you receive funding from family (e.g. RESP)?</span>
   <div id="resp"></div>
 </div>
 
@@ -62,7 +62,7 @@
   As the amount of required materials decreased over the years, this may relate to why few students payed over $1,000 over 8 terms.
 </p>
 <div class="half second">
-  <span class="graph-title">Money spent on school materials (e.g. Textbooks)</span>
+  <span class="graph-title">money spent on school materials (e.g. textbooks)</span>
   <div id="expenses"></div>
 </div>
 
@@ -78,7 +78,7 @@
   Co-op provides the oppurtunity to have an income every 4 months. This may be a factor allowing students to avoid the need for loans.
 </p>
 <div class="half second">
-  <span class="graph-title">Students with loans</span>
+  <span class="graph-title">do you have loans?</span>
   <div id="loans"></div>
 </div>
 <div class="vbx2"></div>
@@ -98,7 +98,7 @@
   The average undergraduate tuition for international students studying in Canada is around $29,700/year compared to $61,200/year for SE
 </p>
 <div class="half second">
-  <span class="graph-title">Debt among students</span>
+  <span class="graph-title">debt among students</span>
   <div id="new-debt"></div>
 </div>
 <!-- Resources: 
@@ -121,7 +121,7 @@
   More text.
 </p>
 <div class="half second">
-  <span class="graph-title">Preferred shopping method</span>
+  <span class="graph-title">preferred shopping method</span>
   <div id="shopping"></div>
 </div>
 
@@ -137,7 +137,7 @@
   More text.
 </p>
 <div class="half second">
-  <span class="graph-title">Preferred payment method</span>
+  <span class="graph-title">preferred payment method</span>
   <div id="payment"></div>
 </div>
 
