--- a/content/future.html
+++ b/content/future.html
@@ -13,10 +13,10 @@
   Stanford University, as well as back at the University of Waterloo.
 </p>
 <div class="half second">
-  <span class="graph-title">Post graduation plans</span>
+  <span class="graph-title">post graduation plans</span>
   <div id="post-grad"></div>
   <div class="vb"></div>
-  <span class="graph-title">Relocation plans</span>
+  <span class="graph-title">relocation plans</span>
   <div id="post-location"></div>
 </div>
 
@@ -24,7 +24,7 @@
 
 <p class="half">
   <span class="big">
-    Big tech and trading firms hire many of the SE grads.
+    Big tech and trading firms hired many of the SE grads.
   </span>
   Unfortunately, only 51 students answered this question,
   so just over 55% of the total graduating class. It is likely
@@ -32,7 +32,7 @@
   when considering everyone's future. 
 </p>
 <div class="half second">
-  <span class="graph-title">Full-Time Company</span>
+  <span class="graph-title">full-time company</span>
   <div id="ft-company"></div>
 </div>
 
@@ -48,7 +48,7 @@
   than accepting an offer elsewhere.
 </p>
 <div class="half second">
-  <span class="graph-title">Co-op conversion</span>
+  <span class="graph-title">had you interned at your full-time company?</span>
   <div id="coop-conversion"></div>
 </div>
 
@@ -64,7 +64,7 @@
   "software developers".
 </p>
 <div class="half second">
-  <span class="graph-title">Will Pursue P.Eng Accreditation</span>
+  <span class="graph-title">will you pursue a P.Eng accreditation?</span>
   <div id="peng"></div>
 </div>
 
@@ -80,7 +80,7 @@
   further.
 </p>
 <div class="half second">
-  <span class="graph-title">Will Continue FYDP Work</span>
+  <span class="graph-title">will you continue your FYDP work?</span>
   <div id="cont-fydp"></div>
 </div>
 
@@ -88,14 +88,14 @@
 
 <p class="half">
   <span class="big">
-    Students are very content with their post-grad plans with 52% feeling
-    that they are perfect and 91% rating their future a 4/5 or higher.
+    Students are very content with their post-grad plans, with 52% feeling
+    that the latter are perfect and 91% rating their future a 4/5 or higher.
   </span>
   Given the state of the world at this moment, it is reassuring to see
   SE students being satisfied with their situations.
 </p>
 <div class="half second">
-  <span class="graph-title">Post-grad contentedness</span>
+  <span class="graph-title">post-grad contentedness ratings</span>
   <div id="post-contentness"></div>
 </div>
 
@@ -103,7 +103,7 @@
 <h3> Full-Time Compensation </h3>
 <p class="half">
   <span class="big">
-    The compensation for the first-year of full-time work for respondents
+    The compensation for the first year of full-time work for respondents
     will average $284,728 CAD, with a median of $260,000. This number
     includes all forms of remuneration eg. signing bonuses and equity.
   </span>
@@ -116,7 +116,7 @@
   <!-- 260k*(1 + 0.77(1.2/1.3 - 1)). -->
 </p>
 <div class="half second">
-  <span class="graph-title">New Grad Total First-Year Compensation</span>
+  <span class="graph-title">new grad total first year compensation</span>
   <div id="ft-total"></div>
 </div>
 
@@ -129,7 +129,7 @@
   We can again estimate this to be $76 and $99 CAD with today's exchange rate.
 </p>
 <div class="half second">
-  <span class="graph-title">New Grad Hourly Wage</span>
+  <span class="graph-title">new grad hourly wage</span>
   <div id="ft-hourly"></div>
 </div>
 
@@ -147,7 +147,7 @@
   With the new rate, the results are $30,505 and $89,742 CAD.
 </p>
 <div class="half second">
-  <span class="graph-title">New Grad Profit Sharing in Compensation</span>
+  <span class="graph-title">new grad profit sharing in compensation</span>
   <div id="ft-stock"></div>
 </div>
 
@@ -163,7 +163,7 @@
   Adjusting for the new exchange rate, we find the median and average to be $37,630 and $59,248 CAD.
 </p>
 <div class="half second">
-  <span class="graph-title">New Grad Sign-On Compensation</span>
+  <span class="graph-title">new grad sign-on compensation</span>
   <div id="ft-signing"></div>
 </div>
 
@@ -173,17 +173,17 @@
 <h3> Motivations </h3>
 <p class="half">
   <span class="big">
-    An enjoyable workplace and good compensation were the biggest factors in
+    An enjoyable workplace and a good compensation were the biggest factors in
     accepting full-time roles. 
   </span>
   It is great to see the class value a positive environment above compensation.
   <br /><br />
   In contrast to most other industries, software recruitment has remained
-  relatively unaffected in the face of a global pandemic. Only 1 respondant factored
+  relatively unaffected in the face of a global pandemic. Only 1 respondent factored
   job security in their decision-making. 
 </p>
 <div class="half second">
-  <span class="graph-title">Factors affecting post-graduation plans</span>
+  <span class="graph-title">factors affecting post-graduation plans</span>
   <div id="motivation"></div>
 </div>
 
@@ -201,7 +201,7 @@
   This way, you can find the most happiness in what you do, whether that's close to home or abroad.
 </p>
 <div class="half second">
-  <span class="graph-title">Plans to return to home country</span>
+  <span class="graph-title">do you plan to return to your home country?</span>
   <div id="post-return-home"></div>
 </div>
 
