--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -16,7 +16,7 @@
   This may explain why many students pick up JavaScript and TypeScript.
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite programming language</span>
+  <span class="graph-title">favourite programming language</span>
   <div id="programming-language"></div>
 </div>
 
@@ -29,7 +29,7 @@
 
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite editor</span>
+  <span class="graph-title">favourite editor</span>
   <div id="editor"></div>
 </div>
 
@@ -42,7 +42,7 @@
   However, in North America, we see 53% of devices running iOS and 45% using Android, which is a similar proportion to what is seen among SE students.
 </p>
 <div class="half second">
-  <span class="graph-title">Favorite mobile OS</span>
+  <span class="graph-title">favorite mobile OS</span>
   <div id="mobile-os"></div>
 </div>
 
@@ -57,19 +57,19 @@
   opened halfway through the program (just before the 3A term).
 </p>
 <div class="half second">
-  <span class="graph-title">Frequented Grocery Stores</span>
+  <span class="graph-title">frequented grocery stores</span>
   <div id="grocery-stores"></div>
 </div>
 
 <p class="half">
   <span class="big">
-  A minor in culinary studies
+  A minor in culinary studies.
   </span>
   SE students cooked often, with ~77% doing so on an almost daily basis.
   That being said, this does not mean that respondents are master chefs.
 </p>
 <div class="half second">
-  <span class="graph-title"> Cooking frequency </span>
+  <span class="graph-title">cooking frequency</span>
   <div id="cooking-frequency"></div>
 </div>
 
@@ -84,19 +84,19 @@
   liked by visitors.
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite Waterloo Restaurants</span>
+  <span class="graph-title">favourite Waterloo restaurants</span>
   <div id="restaurants"></div>
 </div>
 
 <p class="half">
   <span class="big">
-  A class of food critics
+  A class of food critics.
   </span>
   Purchasing food was a common occurrence, with only ~8% of respondents
   making dining a special event.
 </p>
 <div class="half second">
-  <span class="graph-title"> Dining Out frequency </span>
+  <span class="graph-title">dining out frequency</span>
   <div id="eating-out-frequency"></div>
 </div>
 
@@ -105,7 +105,7 @@
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
-  Students clearly value sleeping at reasonable times
+  Students clearly value sleeping at reasonable times.
   </span>
   The most popular answer was 2 AM, at which point ~84% of SE students
   have gone to sleep. However, some students still prefer sleeping late,
@@ -115,7 +115,7 @@
   also willingly go to 24 hour hackathons.
 </p>
 <div class="half second">
-  <span class="graph-title"> Usual sleep time </span>
+  <span class="graph-title">usual sleep time</span>
   <div id="sleep-time"></div>
 </div>
 
@@ -123,14 +123,14 @@
 
 <p class="half">
   <span class="big">
-  S.R.E.A.M - Sleep Rules Everything Around Me
+  S.R.E.A.M - Sleep Rules Everything Around Me.
   </span>
   Future students will be glad to see that studying SE does not mean sacrificing
   sleep. In fact, ~77% of students sleep >= 7 hours on average, which is the
   <a href="https://www.cdc.gov/sleep/about_sleep/how_much_sleep.html"> recommended amount for adults by the CDC.</a>
 </p>
 <div class="half second">
-  <span class="graph-title"> Average sleep duration </span>
+  <span class="graph-title">average sleep duration</span>
   <div id="sleep-duration"></div>
 </div>
 
@@ -146,7 +146,7 @@
   likely due to their dominance for coop and exchange respectively.
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite Travel Locations</span>
+  <span class="graph-title">favourite travel locations</span>
   <div id="travel-locations"></div>
 </div>
 
@@ -199,7 +199,7 @@
   We hope that future SEs will buck this trend of disengagement by past classes.
 </p>
 <div class="half second">
-  <span class="graph-title">University extracurriculars involvement</span>
+  <span class="graph-title">university extracurriculars involvement</span>
   <div id="extracurriculars"></div>
 </div>
 
@@ -216,7 +216,7 @@
   allowing a more flexible schedule for students looking to sharpen their skills.
 </p>
 <div class="half second">
-  <span class="graph-title">Engineering design team involvement</span>
+  <span class="graph-title">engineering design team involvement</span>
   <div id="design-team"></div>
 </div>
 
@@ -226,10 +226,10 @@
   <span class="big">
     SE students who exercise enjoy sports and weight training the most.
   </span>
-  Hiking and Running are the two next most favoured exercise methods.
+  Hiking and running are the two next most favoured exercise methods.
 </p>
 <div class="half second">
-  <span class="graph-title">Favourite exercise methods</span>
+  <span class="graph-title">favourite exercise methods</span>
   <div id="fav-exercise"></div>
 </div>
 
@@ -244,7 +244,7 @@
   however this is still not an overwhelmingly outgoing group.
 </p>
 <div class="half second">
-  <span class="graph-title">Frequency of going out</span>
+  <span class="graph-title">frequency of going out</span>
   <div id="parties"></div>
 </div>
 
@@ -255,13 +255,14 @@
   <span class="big">
     "Friends are the artists who paint happy lips on your face."
   </span>
+  <span class="small">
   - Richelle E. Goodrich
-  <br/>
+  </span>
   Spending time with friends made SE 21 the most happy, followed by cooking and/or
   eating food. Enjoying familial presence came in third.
 </p>
 <div class="half second">
-  <span class="graph-title">Joy bringers</span>
+  <span class="graph-title">joy bringers</span>
   <div id="happy-things"></div>
 </div>
 <div class="hvb"></div>
@@ -277,6 +278,6 @@
 </p>
 <div class="vb"></div>
 <div class="full">
-  <span class="graph-title">Hobbies picked up during the last 5 years</span>
+  <span class="graph-title">hobbies picked up during the last 5 years</span>
   <div id="hobbies"></div>
 </div>
