--- a/content/misc.html
+++ b/content/misc.html
@@ -2,7 +2,7 @@
 <h3> Burnout </h3>
 <p class="half">
   <span class="big">
-    We made it through Waterloo Engineering but not without some hurdles along the way.
+    We made it through Waterloo Engineering, but not without some hurdles along the way.
   </span>
   On average, respondents felt burnout in 3.34 of 8 academic terms (~42%).
   The median and mode were both 2.
@@ -11,7 +11,7 @@
   most respondents found the academic aspect of SE manageable.
 </p>
 <div class="half second">
-  <span class="graph-title">Count of academic terms in which burnout occurred </span>
+  <span class="graph-title">count of academic terms in which burnout occurred </span>
   <div id="burnout"></div>
 </div>
 
@@ -28,7 +28,7 @@
   setting.
 </p>
 <div class="half second">
-  <span class="graph-title">Involvement in fights outside of Martial Arts</span>
+  <span class="graph-title">involvement in fights outside of martial arts</span>
   <div id="fights"></div>
 </div>
 
@@ -44,8 +44,20 @@
   spent by respondents on the platform.
 </p>
 <div class="half second">
-  <span class="graph-title">Weekly Reddit usage</span>
+  <span class="graph-title">weekly reddit usage</span>
   <div id="reddit"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Cat or Dog</h3>
+<p class="half">
+  <span class="big">
+  Most students are dog lovers! 🐕
+</p>
+<div class="half second">
+  <span class="graph-title">are you a cat or a dog person?</span>
+  <div id="cat-or-dog"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -173,7 +185,7 @@ some stories over the past 5 years.
   A non-answer could imply a (low or high) extremity.
 </p>
 <div class="half second">
-  <span class="graph-title">Average frequency of crying in a term</span>
+  <span class="graph-title">average frequency of crying in a term</span>
   <div id="crying"></div>
 </div>
 
@@ -191,7 +203,7 @@ some stories over the past 5 years.
   </a>
 </p>
 <div class="half second">
-  <span class="graph-title">Considered switching majors</span>
+  <span class="graph-title">have you considered switching majors?</span>
   <div id="transfer-thoughts"></div>
 </div>
 
@@ -202,7 +214,7 @@ some stories over the past 5 years.
   Only 4 respondents pondered leaving university.
 </p>
 <div class="half second">
-  <span class="graph-title">Considered leaving university</span>
+  <span class="graph-title">have you considered leaving university?</span>
   <div id="dropout-thoughts"></div>
 </div>
 
@@ -214,7 +226,7 @@ some stories over the past 5 years.
   of the total graduates (92). <!-- TODO: confirm that it was 92 grads? -->
 </p>
 <div class="half second">
-  <span class="graph-title">Is an SE 21 grad</span>
+  <span class="graph-title">are you an SE 21 grad?</span>
   <div id="se21-grad"></div>
 </div>
 
