--- a/content/outcomes.html
+++ b/content/outcomes.html
@@ -11,7 +11,7 @@
   which makes it harder for CS students to meet others.
 </p>
 <div class="half second">
-  <span class="graph-title">Preferred program</span>
+  <span class="graph-title">preferred program, given another chance at university</span>
   <div id="choose-program"></div>
 </div>
 
@@ -21,13 +21,13 @@
 <p class="half">
   <span class="big">
     Being a part of Software Engineering was life-changing for most of
-    the class, and equally enjoyed by both men and women.
+    the class, and equally enjoyed by both women and men.
   </span>
-  51% of the class rated SE a max rating score, and 87% of the class rated above
+  51% of the class rated SE a max score of 5, and 87% of the class rated above
   a 4 out of 5. Shoutouts to the Software Engineering faculty and the class
   for creating such a great environment for students!
 </p>
 <div class="half second">
-  <span class="graph-title">Program rating per gender</span>
+  <span class="graph-title">program rating per gender</span>
   <div id="gender-rating"></div>
 </div>
