--- a/content/relationships.html
+++ b/content/relationships.html
@@ -13,7 +13,7 @@
 </p>
 <div class="half second">
   <span class="graph-title">
-    Average amount of time (hours) spent with parents digitally in a month
+    average amount of time (hours) spent with parents digitally in a month
   </span>
   <div id="fam-digital"></div>
 </div>
@@ -24,7 +24,7 @@
 </p>
 <div class="half second">
   <span class="graph-title">
-    Average amount of time (days) spent with parents physically in a month
+    average amount of time (days) spent with parents physically in a month
   </span>
   <div id="fam-physical"></div>
 </div>
@@ -32,7 +32,7 @@
 <div class="full">
   <div id="fam-distance"></div>
   <span class="graph-title">
-    Distance (kilometres) from familial home
+    distance (kilometres) from familial home
   </span>
 </div>
 <p class="full">
@@ -118,7 +118,7 @@
 <div class="hvb"></div>
 <div class="full">
   <span class="graph-title">
-    Percentage of degree spent in a romantic relationship
+    percentage of degree spent in a romantic relationship
   </span>
   <div id="romance-degree"></div>
 </div>
@@ -126,7 +126,7 @@
 
 <div class="half">
   <span class="graph-title">
-    Number of relationships had during SE degree
+    number of relationships had during SE degree
   </span>
   <div id="romance-relationship-count"></div>
 </div>
@@ -141,13 +141,13 @@
 </p>
 <div class="half second">
   <span class="graph-title">
-    Have you been/are you in a relationship with somoene in SE?
+    have you been/are you in a relationship with someone in SE?
   </span>
   <div id="romance-secest"></div>
 </div>
 <div class="half">
   <span class="graph-title">
-    SE and Sexuality
+    SE and sexuality
   </span>
   <div id="romance-sex"></div>
 </div>
@@ -169,13 +169,13 @@
 <div class="hvb"></div>
 <div class="half">
   <span class="graph-title">
-    Cheating involvement
+    cheating involvement
   </span>
   <div id="romance-cheating"></div>
 </div>
 <div class="half second">
   <span class="graph-title">
-    How were you involved in cheating?
+    how were you involved in cheating?
   </span>
   <div id="romance-cheating-reasons"></div>
 </div>
