--- a/content/health.html
+++ b/content/health.html
@@ -3,25 +3,25 @@
 <h3> Sickness and Injury </h3>
 <p class="half">
   <span class="big">
-    We try hard to stay healthy, but inevitably 90% of respondents fell sick or got injured at some point
+    We try hard to stay healthy, but, inevitably, 90% of respondents fell sick or got injured at some point.
   </span>
   Students faced a variety of incidents from the common cold to shoulder dislocations. However, over 60% fell ill only 4 times or less, showing a fairly low rate of illness per year.
 </p>
 <div class="half second">
-  <span class="graph-title">How many times repsondents fell ill or injured</span>
+  <span class="graph-title">how many times did you fall ill or were injured?</span>
   <div id="sickness"></div>
 </div>
 
 <p class="half">
     <span class="big">
-      Accidents happen and it's important to be covered
+      Accidents happen and it's important to be covered.
     </span>
     At least 55% of respondents reported their health insurance plan helped cover some of the costs associated with their sickness or injury.
     <br/> <br/>
     Depending on where the incident occured and the severity, the coverage may differ. But some coverage is better than none.
   </p>
   <div class="half second">
-    <span class="graph-title">How much did health insurance cover (OHIP, UHIP, FEDS plan)</span>
+    <span class="graph-title">how much of your expenses did health insurance (OHIP, UHIP, FEDS plan) cover?</span>
     <div id="health-insurance"></div>
   </div>
 
@@ -30,7 +30,7 @@
 <h3> Mental Health </h3>
 <p class="half">
   <span class="big">
-    Mental health is a vital part of our well-being that needs continued monitoring
+    Mental health is a vital part of our well-being that needs continuous monitoring.
   </span>
   Half of the respondents reported struggling with mental health problems before and during university. 
   The majority of those reported developing mental health struggles after starting university.
@@ -40,20 +40,20 @@
   It's important to look out for yourself and one another as everyone is fighting a different battle and may need support at any moment.
 </p>
 <div class="half second">
-  <span class="graph-title">Count of respondents who struggled with mental health</span>
+  <span class="graph-title">have you struggled with mental health?</span>
   <div id="mental-health-count"></div>
 </div>
 
 <p class="half">
     <span class="big">
-      The most common mental health issues were Anxiety, Low Self-Esteem, and Depression
+      The most common mental health issues were anxiety, low self-esteem, and depression.
     </span>
-    Trying to manage academics, coop, and social lives can become tolling. 
+    Trying to manage academics, coop, and social lives can take a toll on us. 
     It's important to take some time to focus on ourselves and do the things that are important and relaxing for each of us. 
     This can help us find balance and remind ourselves of our own accomplishments.
   </p>
   <div class="half second">
-    <span class="graph-title">Count of various mental health issues</span>
+    <span class="graph-title">mental health issues faced by the cohort</span>
     <div id="mental-health-issues"></div>
   </div>
 
@@ -61,22 +61,22 @@
 
 <h3>Imposter Syndrome</h3>
 <p class="half">
-  <span class="big">Over 80% of respondants felt imposter syndrome over their university years</span>  
+  <span class="big">Over 80% of respondents felt imposter syndrome over their university years.</span>
   Impostor syndrome refers to an individual's internal experience of believing that they are not as competent as others perceive them to be. 
   The Software Engineering Program is very competitive and has one of the highest admission averages in Waterloo. This can place students in a 
   pressure-to-achieve environment which might have lead to students feeling like an imposter.
 </p>
 <div class="half second">
-  <span class="graph-title">Students who felt Imposter Syndrome</span>
+  <span class="graph-title">did you feel like an imposter?</span>
   <div id="imposter-syndrome" class="graph-center"></div>
 </div>
 <p class="half">
-  By the end of their university career, around 46% of students do not feel imposter syndrome, while 30% of the students sometimes do and 24% of the 
+  By the end of their university career, around 46% of students do not feel imposter syndrome, while 30% of the students sometimes do, and 24% of the 
   students still do. This shows a growth in the student's confidence over the years as they overcame their academic hurdles, experienced the real world
   during coops, and found their calling in software engineering. 
 </p>
 <div class="half second">
-  <span class="graph-title">Students who still feel Imposter Syndrome</span>
+  <span class="graph-title">do you still feel like an imposter?</span>
   <div id="imposter-syndrome-now" class="graph-center"></div>
 </div>
 <div class="vbx4"></div>
@@ -84,7 +84,7 @@
 <h3> Physical Health </h3>
 <p class="half">
   <span class="big">
-    Active bodies and active minds
+    Active bodies and active minds.
   </span>
   Around 40% of respondents would find some time to exercise throughout the week. 
   While over half of respondents would exercise less frequently over the months and terms.
@@ -94,13 +94,13 @@
   <!-- https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1470658/ -->
 </p>
 <div class="half second">
-  <span class="graph-title">How often did people exercise</span>
+  <span class="graph-title">exercise frequency</span>
   <div id="exercise-frequency"></div>
 </div>
 
 <p class="half">
     <span class="big">
-      Strengthening our lungs and muscles
+      Strengthening our lungs and muscles.
     </span>
     45% of respondents reported doing strength-related exercises, like weight-training and calisthenics. 
     And 38% reported doing aerobic exercises like walking, running, hiking, biking etc. Anything to get the heart pumping.
@@ -108,25 +108,25 @@
     It's important to find the form of exercise that brings the most enjoyment to get the most out of it.
 </p>
 <div class="half second">
-    <span class="graph-title">Common forms of exercise</span>
+    <span class="graph-title">common forms of exercise</span>
     <div id="exercise-type"></div>
 </div>
 
 <p class="half">
     <span class="big">
-        47% of respondents have particiapted in intramurals
+        47% of respondents have participated in intramurals.
     </span>
     Intramurals are a great way to get active in some organized sports and even learn a sport you haven't played before.
     It's also been a great way to meet people and have fun with friends while breaking a sweat.
 </p>
 <div class="half second">
-    <span class="graph-title">How often did people participate in intramurals</span>
+    <span class="graph-title">intramural sport participation rate</span>
     <div id="intramurals"></div>
 </div>
 
 <p class="half">
     <span class="big">
-        Like dynamic variables, our weights change over time
+        Like dynamic variables, our weights change over time.
     </span>
     66% of respondents experienced an increase in weight over the years while 18% experienced a decrease.
     <br/> <br/>
@@ -134,7 +134,7 @@
     <!-- Net Change 355 lbs -->
 </p>
 <div class="half second">
-    <span class="graph-title">Change in weight over undergrad (lbs)</span>
+    <span class="graph-title">change in weight over undergrad (lbs)</span>
     <div id="weight"></div>
 </div>
 
@@ -143,12 +143,12 @@
 <h3> Controlled Substances </h3>
 <p class="half">
   <span class="big">
-    54% of respondents reported using some form of controlled substance for recreational purposes
+    54% of respondents reported using some form of controlled substance for recreational purposes.
   </span>
   Alcohol and marijuana were the most common. 40% reported having alocohol and 30% reported trying marijuana.
 </p>
 <div class="half second">
-  <span class="graph-title">Kinds of recreational controlled substances</span>
+  <span class="graph-title">kinds of recreational controlled substances used</span>
   <div id="controlled-substances"></div>
 </div>
 
