--- a/content/transfers.html
+++ b/content/transfers.html
@@ -2,28 +2,28 @@
 <h3> Programs </h3>
 <p class="half">
 <span class="big">
-    All students who transferred out of SE, went into the Computer Science Program.
+    All students who transferred out of SE went into the Computer Science program.
 </span>
-Of the people surveyed approximately 9.5% of students switched out of the Software Engineering Program.
+Of the people surveyed, approximately 9.5% of students switched out of the Software Engineering program.
 </p>
 <div class="half second">
-    <span class="graph-title">Proportion of students who transferred.</span>
+    <span class="graph-title">proportion of students who transferred out</span>
     <div id="students-transferred"></div>
 </div>
 
 <div class="vbx2"></div>
 
-<h3> Year Switched Out </h3>
+<h3> The Switch Years </h3>
 <p class="half">
 <span class="big">
-    Majority of the students switched out of the program in second and third year
+    The majority of the students switched out of the program in their second or third year.
 </span>
-Data was combined from both the survey and the SE board and it is seen that a majority of students switched programs
-in second and third year. It is also interesting to note that almost always a plurality of transferring students left SE in
+The data here was a combination of both the survey and the SE board results. We see that a majority of students switched programs
+in their second or their third year. It is also interesting to note that almost always a plurality of transferring students left SE in
 an Excellent academic standing. 
 </p>
 <div class="half second">
-    <span class="graph-title">Year Switched Out</span>
+    <span class="graph-title">year of the switch to CS</span>
     <div id="term-transferred"></div>
 </div>
 <div class="vbx2"></div>
@@ -31,15 +31,15 @@ an Excellent academic standing.
 <h3> Reason for Switching </h3>
 <p class="half">
 <span class="big">
-    Flexible Course Schedule is the main reason for switching out of Software Engineering
+    A flexible course schedule is the main reason for switching out of Software Engineering.
 </span>
-The engineering program has a relatively rigid course schedule which offers students with the flexibility to choose courses in Fourth year. 
-The computer science program on the other hand is less restrictive and allows students to customize their schedules freely. 
+The engineering program has a relatively rigid course schedule which offers students the flexibility to choose courses usually only in their fourth year. 
+The computer science program, on the other hand, is less restrictive and allows students to customize their schedules freely. 
 <br /> <br />
-Other reasons for transferring included avoiding a course, graduating early and accommodating for an exchange term. 
+Other reasons for transferring included avoiding a course, graduating early, and accommodating for an exchange term. 
 </p>
 <div class="half second">
-    <span class="graph-title">Reasons to Transfer</span>
+    <span class="graph-title">reasons for transferring</span>
     <div id="reasons-transferred"></div>
 </div>
 <div class="vbx2"></div>
@@ -47,25 +47,25 @@ Other reasons for transferring included avoiding a course, graduating early and 
 <h3> Disliked Courses </h3>
 <p class="half">
 <span class="big">
-    ECE 105 and ECE 106 were the disliked courses among transferred students
+    ECE 105 and ECE 106 were the disliked courses among transferred students.
 </span>
-All the dislkied courses of transffered students were part of the course requirements for SE. As seen earlier, students likely transferred
-in order to have a more flexible schedule for future terms and take courses better suited for them. 
+All the disliked courses of transfered students were part of the course requirements for SE. As seen earlier, students likely transferred
+in order to have a more flexible schedule for future terms and to take courses better suited for them. 
 </p>
 <div class="half second">
-    <span class="graph-title">Disliked Courses</span>
+    <span class="graph-title">disliked courses</span>
     <div id="disliked-courses-transferred"></div>
 </div>
 <div class="vbx2"></div>
 
-<h3> Regret their Decisions </h3>
+<h3>I Regret Nothing</h3>
 <p class="half">
 <span class="big">
-    None of the transferred students regretted their decision
+    None of the transferred students regretted their decision.
 </span>
-The computer science program was successfully able to provide the transferred students with a better place to align themselves towards their university goals. 
+The computer science program was successfully able to provide the transferred students with a better place to align themselves with their university goals. 
 </p>
 <div class="half second">
-    <span class="graph-title">Regret Decision</span>
+    <span class="graph-title">did you regret transferring out of SE?</span>
     <div id="regret-transferred"></div>
 </div>
