--- a/content/academics.html
+++ b/content/academics.html
@@ -359,7 +359,7 @@
 <h3> Sleep </h3>
 <p class="half">
   <span class="big">
-  On average, students performed slighlty better if they slept less.
+  On average, students performed slighlty worse if they slept more than 8 hours.
   </span>
   Note that all respondents slept at least 5 hours. Although there seems to be some correlation between sleep
   and grades, this does not necessarily mean that one causes the other.
