--- a/content/background.html
+++ b/content/background.html
@@ -110,8 +110,8 @@
   <span class="big">
   35.7% of all respondents, and 39% of respondents who are domestic students, immigrated to Canada.
   </span>
-  Immigrated students are any students who are considered domestic students and <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/general-information-and-regulations/fee-schedule-and-tuition-assessment-information" target="_blank">do not pay
-  as a result international tuition</a>, and among others are naturalized citizens or are Permanent Residents of Canada.
+  Immigrated students are any students who are considered domestic students and <a href="https://uwaterloo.ca/graduate-studies-academic-calendar/general-information-and-regulations/fee-schedule-and-tuition-assessment-information" target="_blank">
+  as a result do not pay international tuition</a>, and among others are naturalized citizens or are Permanent Residents of Canada.
   Immigrated students came from countries such as Belgium, China, England and India.
 </p>
 <div class="vb"></div>
@@ -129,7 +129,7 @@
   <span class="big">
   65.3% of respondents came from Ontario, of which 66% came from the GTA/Toronto area specifically.
   </span>
-  In Canada, students also came from other provinces such as Alberta, Britich Columbia, New Brunswick and Quebec.
+  In Canada, students also came from other provinces such as Alberta, British Columbia, New Brunswick and Quebec.
 </p>
 <div class="half second">
   <span class="graph-title">locations considered "home"</span>
